Bug 1516206 - Part 1 Move DOM lengths and numbers into the mozilla::dom namespace r=dholbert