dom/svg/SVGFEColorMatrixElement.h
@@ -15,9 +15,9 @@ nsresult NS_NewSVGFEColorMatrixElement(
     nsIContent** aResult, already_AddRefed<mozilla::dom::NodeInfo>&& aNodeInfo);
 
 namespace mozilla {
-class DOMSVGAnimatedNumberList;
-
 namespace dom {
+
+class DOMSVGAnimatedNumberList;
 
 typedef SVGFE SVGFEColorMatrixElementBase;
 
